# 2024

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
about/: index.html
attend/: index.html
attend/virtual/: index.html
docs/: about.md  attend.md  faq.md  index.md
docs/attend/: index.md  virtual.md
docs/schedule/: full_schedule.md  keynotes.md  speaking.md  talks.md  tutorials.md
docs/sponsors/: our-sponsors.md  sponsor-us.md
docs/stylesheets/: extra.css
faq/: index.html
overrides/: home.html
schedule/: index.html
schedule/full_schedule/: index.html
schedule/keynotes/: index.html
schedule/speaking/: index.html
schedule/talks/: index.html
schedule/tutorials/: index.html
search/: search_index.json
sponsors/our-sponsors/: index.html
sponsors/sponsor-us/: index.html
